--- a/DevHabit/DevHabit.Api/DevHabit.Api.csproj
+++ b/DevHabit/DevHabit.Api/DevHabit.Api.csproj
@@ -23,7 +23,8 @@
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" />
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" />
     <PackageReference Include="OpenTelemetry.Instrumentation.Http" />
-    <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" />   
+    <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" />
+    <PackageReference Include="System.Linq.Dynamic.Core" />   
   </ItemGroup>
 
 </Project>
